added position .caption
section what-we-do

--- a/index.html
+++ b/index.html
@@ -142,26 +142,32 @@
         <ul class="list">
           <li class="item">
             <a class="link" href="#">
-              <img
-                src="./images/projects/desctop.jpg"
-                alt="Человек работающий за портативным компьютером"
-              />
-              <h3 class="caption">Десктопные приложения</h3>
+              <div class="product">
+                <img
+                  src="./images/projects/desctop.jpg"
+                  alt="Человек работающий за портативным компьютером"
+                />
+                <h3 class="caption">Десктопные приложения</h3>
+              </div>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
-              <img src="./images/projects/mobile.jpg" alt="Смартфон" />
-              <h3 class="caption">Мобильные приложения</h3>
+              <div class="product">
+                <img src="./images/projects/mobile.jpg" alt="Смартфон" />
+                <h3 class="caption">Мобильные приложения</h3>
+              </div>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
-              <img
-                src="./images/projects/design.jpg"
-                alt="Монитор с изображением макета"
-              />
-              <h3 class="caption">Дизайнерские решения</h3>
+              <div class="product">
+                <img
+                  src="./images/projects/design.jpg"
+                  alt="Монитор с изображением макета"
+                />
+                <h3 class="caption">Дизайнерские решения</h3>
+              </div>
             </a>
           </li>
         </ul>
