wraped sections inside by containers

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main>
       <!-- ANCHOR Герой -->
       <section class="hero">
-        <div>
+        <div class="container">
           <h1 class="hero-title">
             Эффективные решения<br />
             для вашего бизнеса
@@ -79,98 +79,102 @@
 
       <!-- ANCHOR Особенности -->
       <section class="feature">
-        <h2 hidden>Особеннности</h2>
-        <ul class="list">
-          <li class="item">
-            <div class="container-icon">
-              <svg width="70" height="70">
-                <use href="./images/sprite.svg#antenna"></use>
-              </svg>
-            </div>
+        <div class="container">
+          <h2 hidden>Особеннности</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="container-icon">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#antenna"></use>
+                </svg>
+              </div>
 
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="desc">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="item">
-            <div class="container-icon">
-              <svg width="70" height="70">
-                <use href="./images/sprite.svg#clock"></use>
-              </svg>
-            </div>
+              <h3 class="title">Внимание к деталям</h3>
+              <p class="desc">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="item">
+              <div class="container-icon">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#clock"></use>
+                </svg>
+              </div>
 
-            <h3 class="title">Пунктуальность</h3>
-            <p class="desc">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="item">
-            <div class="container-icon">
-              <svg width="70" height="70">
-                <use href="./images/sprite.svg#diagram"></use>
-              </svg>
-            </div>
+              <h3 class="title">Пунктуальность</h3>
+              <p class="desc">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item">
+              <div class="container-icon">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#diagram"></use>
+                </svg>
+              </div>
 
-            <h3 class="title">Планирование</h3>
-            <p class="desc">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="item">
-            <div class="container-icon">
-              <svg width="70" height="70">
-                <use href="./images/sprite.svg#astronaut"></use>
-              </svg>
-            </div>
+              <h3 class="title">Планирование</h3>
+              <p class="desc">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="item">
+              <div class="container-icon">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
 
-            <h3 class="title">Современные технологии</h3>
-            <p class="desc">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+              <h3 class="title">Современные технологии</h3>
+              <p class="desc">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- ANCHOR Чем мы занимаемся -->
       <section class="what-we-do section">
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li class="item">
-            <a class="link" href="#">
-              <div class="product">
-                <img
-                  src="./images/projects/desctop.jpg"
-                  alt="Человек работающий за портативным компьютером"
-                />
-                <h3 class="caption">Десктопные приложения</h3>
-              </div>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="#">
-              <div class="product">
-                <img src="./images/projects/mobile.jpg" alt="Смартфон" />
-                <h3 class="caption">Мобильные приложения</h3>
-              </div>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="#">
-              <div class="product">
-                <img
-                  src="./images/projects/design.jpg"
-                  alt="Монитор с изображением макета"
-                />
-                <h3 class="caption">Дизайнерские решения</h3>
-              </div>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li class="item">
+              <a class="link" href="#">
+                <div class="product">
+                  <img
+                    src="./images/projects/desctop.jpg"
+                    alt="Человек работающий за портативным компьютером"
+                  />
+                  <h3 class="caption">Десктопные приложения</h3>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="#">
+                <div class="product">
+                  <img src="./images/projects/mobile.jpg" alt="Смартфон" />
+                  <h3 class="caption">Мобильные приложения</h3>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="#">
+                <div class="product">
+                  <img
+                    src="./images/projects/design.jpg"
+                    alt="Монитор с изображением макета"
+                  />
+                  <h3 class="caption">Дизайнерские решения</h3>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- ANCHOR Наша команда -->
@@ -348,57 +352,59 @@
 
       <!-- ANCHOR Постоянные клиенты -->
       <section class="customers section">
-        <h2 class="title">Постоянные клиенты</h2>
-        <ul class="list">
-          <li class="item">
-            <a class="link" href="#">
-              <svg class="logo-icon" width="45" height="50">
-                <title>Лого клиента 1</title>
-                <use href="./images/sprite.svg#logo1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="#">
-              <svg class="logo-icon" width="40" height="52">
-                <title>Лого клиента 2</title>
-                <use href="./images/sprite.svg#logo2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="#">
-              <svg class="logo-icon" width="41" height="43">
-                <title>Лого клиента 3</title>
-                <use href="./images/sprite.svg#logo3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="#">
-              <svg class="logo-icon" width="80" height="43">
-                <title>Лого клиента 4</title>
-                <use href="./images/sprite.svg#logo4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="#">
-              <svg class="logo-icon" width="59" height="47">
-                <title>Лого клиента 5</title>
-                <use href="./images/sprite.svg#logo5"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="#">
-              <svg class="logo-icon" width="89" height="46">
-                <title>Лого клиента 6</title>
-                <use href="./images/sprite.svg#logo6"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Постоянные клиенты</h2>
+          <ul class="list">
+            <li class="item">
+              <a class="link" href="#">
+                <svg class="logo-icon" width="45" height="50">
+                  <title>Лого клиента 1</title>
+                  <use href="./images/sprite.svg#logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="#">
+                <svg class="logo-icon" width="40" height="52">
+                  <title>Лого клиента 2</title>
+                  <use href="./images/sprite.svg#logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="#">
+                <svg class="logo-icon" width="41" height="43">
+                  <title>Лого клиента 3</title>
+                  <use href="./images/sprite.svg#logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="#">
+                <svg class="logo-icon" width="80" height="43">
+                  <title>Лого клиента 4</title>
+                  <use href="./images/sprite.svg#logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="#">
+                <svg class="logo-icon" width="59" height="47">
+                  <title>Лого клиента 5</title>
+                  <use href="./images/sprite.svg#logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="#">
+                <svg class="logo-icon" width="89" height="46">
+                  <title>Лого клиента 6</title>
+                  <use href="./images/sprite.svg#logo6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
