--- a/portfolio.html
+++ b/portfolio.html
@@ -66,215 +66,216 @@
     <main>
       <!-- ANCHOR Portfolio -->
       <section class="portfolio">
-        <h1 hidden>Наши работы</h1>
-
-        <ul class="filter-nav list">
-          <li class="item">
-            <button class="filter-btn current" type="button">Все</button>
-          </li>
-          <li class="item">
-            <button class="filter-btn" type="button">Веб-сайты</button>
-          </li>
-          <li class="item">
-            <button class="filter-btn" type="button">Приложения</button>
-          </li>
-          <li class="item">
-            <button class="filter-btn" type="button">Дизайн</button>
-          </li>
-          <li class="item">
-            <button class="filter-btn" type="button">Маркетинг</button>
-          </li>
-        </ul>
-
-        <!-- ANCHOR Все -->
-        <div class="all-container">
-          <ul class="list-all list">
+        <div class="container">
+          <h1 hidden>Наши работы</h1>
+          <ul class="filter-nav list">
             <li class="item">
-              <a>
-                <div class="card-container">
-                  <div class="img-container">
-                    <img src="./images/portfolio-all-range/img0.jpg" alt="" />
-                    <p class="details">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
-                  <div class="description-container">
-                    <h2 class="project-name">Технокряк</h2>
-                    <p class="project-type">Веб-сайт</p>
-                  </div>
-                </div>
-              </a>
+              <button class="filter-btn current" type="button">Все</button>
             </li>
             <li class="item">
-              <a>
-                <div class="card-container">
-                  <div class="img-container">
-                    <img src="./images/portfolio-all-range/img1.jpg" alt="" />
-                    <p class="details">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
-                  <div class="description-container">
-                    <h2 class="project-name">
-                      Постер <span lang="en">New Orlean vs Golden Star</span>
-                    </h2>
-                    <p class="project-type">Дизайн</p>
-                  </div>
-                </div>
-              </a>
+              <button class="filter-btn" type="button">Веб-сайты</button>
             </li>
             <li class="item">
-              <a>
-                <div class="card-container">
-                  <div class="img-container">
-                    <img src="./images/portfolio-all-range/img2.jpg" alt="" />
-                    <p class="details">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
-                  <div class="description-container">
-                    <h2 class="project-name">
-                      Ресторан <span lang="en">Seafood</span>
-                    </h2>
-                    <p class="project-type">Приложение</p>
-                  </div>
-                </div>
-              </a>
+              <button class="filter-btn" type="button">Приложения</button>
             </li>
             <li class="item">
-              <a>
-                <div class="card-container">
-                  <div class="img-container">
-                    <img src="./images/portfolio-all-range/img3.jpg" alt="" />
-                    <p class="details">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
-                  <div class="description-container">
-                    <h2 class="project-name">
-                      Проект <span lang="en">Prime</span>
-                    </h2>
-                    <p class="project-type">Маркетинг</p>
-                  </div>
-                </div>
-              </a>
+              <button class="filter-btn" type="button">Дизайн</button>
             </li>
             <li class="item">
-              <a>
-                <div class="card-container">
-                  <div class="img-container">
-                    <img src="./images/portfolio-all-range/img4.jpg" alt="" />
-                    <p class="details">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
-                  <div class="description-container">
-                    <h2 class="project-name">
-                      Проект <span lang="en">Boxes</span>
-                    </h2>
-                    <p class="project-type">Приложение</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="item">
-              <a>
-                <div class="card-container">
-                  <div class="img-container">
-                    <img src="./images/portfolio-all-range/img5.jpg" alt="" />
-                    <p class="details">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
-                  <div class="description-container">
-                    <h2 class="project-name" lang="en">
-                      Inspiration has no Borders
-                    </h2>
-                    <p class="project-type">Веб-сайт</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="item">
-              <a>
-                <div class="card-container">
-                  <div class="img-container">
-                    <img src="./images/portfolio-all-range/img6.jpg" alt="" />
-                    <p class="details">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
-                  <div class="description-container">
-                    <h2 class="project-name">
-                      Издание <span lang="en">Limited Edition</span>
-                    </h2>
-                    <p class="project-type">Дизайн</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="item">
-              <a>
-                <div class="card-container">
-                  <div class="img-container">
-                    <img src="./images/portfolio-all-range/img7.jpg" alt="" />
-                    <p class="details">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
-                  <div class="description-container">
-                    <h2 class="project-name">
-                      Проект <span lang="en">LAB</span>
-                    </h2>
-                    <p class="project-type">Маркетинг</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="item">
-              <a>
-                <div class="card-container">
-                  <div class="img-container">
-                    <img src="./images/portfolio-all-range/img8.jpg" alt="" />
-                    <p class="details">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
-                  <div class="description-container">
-                    <h2 class="project-name">Growing Business</h2>
-                    <p class="project-type">Приложение</p>
-                  </div>
-                </div>
-              </a>
+              <button class="filter-btn" type="button">Маркетинг</button>
             </li>
           </ul>
+
+          <!-- ANCHOR Все -->
+          <div class="all-container">
+            <ul class="list-all list">
+              <li class="item">
+                <a>
+                  <div class="card-container">
+                    <div class="img-container">
+                      <img src="./images/portfolio-all-range/img0.jpg" alt="" />
+                      <p class="details">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                    <div class="description-container">
+                      <h2 class="project-name">Технокряк</h2>
+                      <p class="project-type">Веб-сайт</p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <li class="item">
+                <a>
+                  <div class="card-container">
+                    <div class="img-container">
+                      <img src="./images/portfolio-all-range/img1.jpg" alt="" />
+                      <p class="details">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                    <div class="description-container">
+                      <h2 class="project-name">
+                        Постер <span lang="en">New Orlean vs Golden Star</span>
+                      </h2>
+                      <p class="project-type">Дизайн</p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <li class="item">
+                <a>
+                  <div class="card-container">
+                    <div class="img-container">
+                      <img src="./images/portfolio-all-range/img2.jpg" alt="" />
+                      <p class="details">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                    <div class="description-container">
+                      <h2 class="project-name">
+                        Ресторан <span lang="en">Seafood</span>
+                      </h2>
+                      <p class="project-type">Приложение</p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <li class="item">
+                <a>
+                  <div class="card-container">
+                    <div class="img-container">
+                      <img src="./images/portfolio-all-range/img3.jpg" alt="" />
+                      <p class="details">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                    <div class="description-container">
+                      <h2 class="project-name">
+                        Проект <span lang="en">Prime</span>
+                      </h2>
+                      <p class="project-type">Маркетинг</p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <li class="item">
+                <a>
+                  <div class="card-container">
+                    <div class="img-container">
+                      <img src="./images/portfolio-all-range/img4.jpg" alt="" />
+                      <p class="details">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                    <div class="description-container">
+                      <h2 class="project-name">
+                        Проект <span lang="en">Boxes</span>
+                      </h2>
+                      <p class="project-type">Приложение</p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <li class="item">
+                <a>
+                  <div class="card-container">
+                    <div class="img-container">
+                      <img src="./images/portfolio-all-range/img5.jpg" alt="" />
+                      <p class="details">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                    <div class="description-container">
+                      <h2 class="project-name" lang="en">
+                        Inspiration has no Borders
+                      </h2>
+                      <p class="project-type">Веб-сайт</p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <li class="item">
+                <a>
+                  <div class="card-container">
+                    <div class="img-container">
+                      <img src="./images/portfolio-all-range/img6.jpg" alt="" />
+                      <p class="details">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                    <div class="description-container">
+                      <h2 class="project-name">
+                        Издание <span lang="en">Limited Edition</span>
+                      </h2>
+                      <p class="project-type">Дизайн</p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <li class="item">
+                <a>
+                  <div class="card-container">
+                    <div class="img-container">
+                      <img src="./images/portfolio-all-range/img7.jpg" alt="" />
+                      <p class="details">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                    <div class="description-container">
+                      <h2 class="project-name">
+                        Проект <span lang="en">LAB</span>
+                      </h2>
+                      <p class="project-type">Маркетинг</p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <li class="item">
+                <a>
+                  <div class="card-container">
+                    <div class="img-container">
+                      <img src="./images/portfolio-all-range/img8.jpg" alt="" />
+                      <p class="details">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
+                    <div class="description-container">
+                      <h2 class="project-name">Growing Business</h2>
+                      <p class="project-type">Приложение</p>
+                    </div>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
