--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- ANCHOR Шапка сайта -->
-    <header class="page-header">
+    <header class="page-header portfolio-nav">
       <div class="container">
         <nav class="nav">
           <a class="logo" href="./index.html" lang="en"
